<resources>
    <string name="label_abastecimento">Abastecimento</string>
    <string name="abastecimentos">Abastecimentos</string>
    <string name="abastecedor">Abastecedor</string>
    <string name="app_name">Constran SAM</string>
    <string name="atividade">Atividade</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cc_obra">Centro de Custo</string>
    <string name="cc_obra2">Centro de Custo 2</string>
    <string name="data_hora">Data e Hora</string>
    <string name="dados">Data</string>
    <string name="data_saida">Data saída</string>
    <string name="destino">Destino</string>
    <string name="dispositivo">Dispositivo</string>
    <string name="equipamentoCarga">Eqpto. Carga</string>
    <string name="servico">Serviço</string>
    <string name="componente">Componente</string>
    <string name="equipe">Equipe</string>
    <string name="pluviometro">Pluviômetro</string>
    <string name="volumeChuva">Volume Chuva</string>
    <string name="integrante">Integrante</string>
    <string name="integrantes_temp">Integrantes Temporários</string>
    <string name="matricula">Matrícula</string>
    <string name="manual">Manual</string>
    <string name="automatico">Automático</string>
    <string name="smsmt">SMSMT</string>
    <string name="encarregado">Encarregado</string>
    <string name="evento">Evento Equipe</string>
    <string name="evento_evento">Evento</string>
    <string name="evento_indiv">Evento Integrante</string>
    <string name="historico_eventos">Histórico Equipe</string>
    <string name="historico_eventos_indiv">Histórico Integrante</string>
    <string name="historico">Histórico</string>
    <string name="tipo_evento">Tipo Evento</string>
    <string name="equipamento">Equipamento</string>
    <string name="equipamentos">Equipamentos</string>
    <string name="quilometragem">Hodômetro</string>
    <string name="obra">Obra</string>
    <string name="ok">OK</string>
    <string name="frente_obra">Frente de Obra</string>
    <string name="fim">Fim</string>
    <string name="hora">Hora</string>
    <string name="apontam">Apontamento</string>
    <string name="horario">Horário</string>
    <string name="hora_inicio">Hora Início</string>
    <string name="hora_termino">Hora Término</string>
    <string name="hora_viagem">Hora Viagem</string>
    <string name="hora_evento">Hora Evento</string>
    <string name="horimetros">Horímetros</string>
    <string name="horimetro">Horímetro</string>
    <string name="hodometro">Hodômetro</string>
    <string name="peso">Peso (ton)</string>
    <string name="prefixo">Prefixo</string>
    <string name="estacasTolerancia">Estacas *</string>
    <string name="estacas">Estaca(s)</string>
    <string name="estaca">Estaca</string>
    <string name="estaca_inicial">Estaca Inicial</string>
    <string name="mao_obra">Mão de obra</string>
    <string name="horimetro_inicial">Horímetro Inicial</string>
    <string name="material">Material</string>
    <string name="movimentacoes">Movimentações</string>
    <string name="novo">Novo</string>
    <string name="localizacao">Localização Atual</string>
    <string name="localizacao_col">Localização</string>
    <string name="configTablet">Sobre o Dispositivo</string>
    <string name="abastecimento">Abastecimento / Lubrificação</string>
    <string name="saldos">saldos</string>
    <string name="msg_aviso">Aviso</string>
    <string name="msg_erro">Erro</string>
    <string name="msg_ok">OK</string>
    <string name="observacoes">Observações</string>
    <string name="origem">Origem</string>
    <string name="justificativa">Justificativa</string>
    <string name="origemDestino">Origem / Destino</string>
    <string name="paralisacao">Paralisação</string>
    <string name="manutencao_servicos">Manutenção Serviços</string>
    <string name="equipamento_categorias">Equipamento Categorias</string>
    <string name="indicePluviometrico">Índices Pluviométricos</string>
    <string name="percentual_carga">Perc. de Carga</string>
    <string name="operador">Operador</string>
    <string name="operador1">Operador 1</string>
    <string name="operador2">Operador 2</string>
    <string name="eticket">E-Ticket</string>
    <string name="gera_vale">Geração E-Ticket</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="modificar">Modificar</string>
    <string name="server">Servidor</string>
    <string name="servicos">Serviços</string>
    <string name="portaftp">Porta FTP</string>
    <string name="portaweb">Porta WEB</string>
    <string name="tolerancia">Tolerância</string>
    <string name="duracao">Duração (h)</string>
    <string name="producao">Produção</string>
    <string name="producao_header">Produção</string>
    <string name="referencia">Referência</string>
    <string name="voltar">Voltar</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="totalConsulta">Total: #</string>
    <string name="apropriar">Apropriar</string>
    <string name="buscar">Buscar</string>
    <string name="limpar">Limpar</string>
    <string name="concluir">Concluir</string>
    <string name="autorizacao">Autorização</string>
    <string name="posto">Posto</string>
    <string name="inicio">Início</string>
    <string name="termino">Término</string>
    <string name="confirmacao">Confirmação</string>
    <string name="tipo">Tipo</string>
    <string name="lubrificacao">Lubrificação</string>
    <string name="combustivel">Combustível/ Lub.</string>
    <string name="qte">Quantidade</string>
    <string name="transferencia">Transferência</string>
    <string name="rae">RAE</string>
    <string name="dados_previos">Dados Prévios</string>
    <string name="visualizacao">Visualização</string>
    <string name="consulta">Consulta</string>
    <string name="totaliz_inicial">Totalizador Inicial</string>
    <string name="totaliz_final">Totalizador Final</string>
    <string name="informe_senha">Informe a Senha</string>
    <string name="mao_de_obra">Mão de Obra</string>
    <string name="dois_pontos">:</string>
    <string name="grid_vazio">Nenhum item adicionado</string>
    <string name="alerta">Alerta</string>
    <string name="unidade_medida_mm">(mm)</string>
    <string name="manutencoes">Manutenções</string>
    <string name="TOKEN_QR_CODE">c0n5tran</string>
    <string name="SPLIT_TOKEN_QR_CODE">;</string>
    <string name="hint_data">Data</string>
    <string name="hint_selecione">Selecione</string>
    <string name="ALERT_CLEAR_DATABASE">Esta ação irá apagar os apontamentos existentes.\n\nDeseja realmente prosseguir ?</string>
    <string name="ALERT_DESCARREGAR_INFO">Esta ação irá enviar os apontamentos existentes.\n\nDeseja realmente prosseguir ?</string>
    <string name="ALERT_LOGOUT">Esta ação irá realizar o logout do usuário autenticado.\n\nDeseja realmente prosseguir ?</string>
    <string name="ALERT_TEMP_FILE">Existe um abastecimento em andamento.\n\nDeseja prosseguir ?</string>
    <string name="ALERT_GENERATE_FILE">Necessário gerar arquivo.</string>
    <string name="ALERT_UPDATE">Deseja realmente atualizar o Tablet?</string>
    <string name="ALERT_LOCATION">Para prosseguir, informe sua localização atual.</string>
    <string name="ALERT_USER_NOT_LOGGED">Para prosseguir, é necessário informar o usuário.</string>
    <string name="ALERT_STATION">Para prosseguir, informe o Posto nas configurações do dispositivo.</string>
    <string name="ALERT_SUCESS_GENERATION"># gerado com sucesso !</string>
    <string name="ALERT_BLANK_APROP_CREATE">Não existem apontamentos registrados no banco de dados !</string>
    <string name="ALERT_SUCESS_SEND"># enviado com sucesso !</string>
    <string name="ALERT_SUCESS_COPY"># copiado com sucesso !</string>
    <string name="ALERT_SUCESS_DESCARREGAMENTO">Apontamentos descarregados com sucesso !</string>
    <string name="ALERT_SUCESS_ATUALIZACAO">Atualização realizada com sucesso !</string>
    <string name="ALERT_EXIST_REQUIRED">Existem campos obrigatórios não preenchidos !</string>
    <string name="ALERT_REQUIRED"># é um campo obrigatório !</string>
    <string name="ALERT_REQUIRED_ESTACAS">Estacas é um campo obrigatório pra listar #!</string>
    <string name="ALERT_INVALID_VALUE"># possui um valor inválido !</string>
    <string name="ALERT_LENGTH_NUMBER">#deve possuir # dígitos !</string>
    <string name="ALERT_FILE_NOT_SEND">Não é possível limpar apontamentos !\nArquivo # ainda não foi enviado p/ o servidor !</string>
    <string name="ALERT_OFFLINE">Necessária conexão à Internet !</string>
    <string name="ALERT_SERVER_OFFLINE">Erro ao conectar ao Servidor, tente novamente !</string>
    <string name="ALERT_SUCESS_UPDATE">Atualização realizada com sucesso !</string>
    <string name="ALERT_FAIL_UPDATE">Não foi possível realizar a operação!</string>
    <string name="ALERT_SELECT_EQP">Selecione um Equipamento !</string>
    <string name="ALERT_APONTAMENTOS_EXISTENTES">Para atualizar, descarregue os apontamentos existentes !</string>
    <string name="ALERT_SELECT_ABASTECEDOR">Selecione um Abastecedor !</string>
    <string name="ALERT_SELECT_OPERADOR">Selecione um Operador !</string>
    <string name="ALERT_SELECT_ABASTECEDOR_QRCODE">QRCode de Abastecedor inválido !</string>
    <string name="ALERT_SELECT_OPERADOR_QRCODE">QRCode de Operador inválido !</string>
    <string name="ALERT_SELECT_INTEGRANTE_QRCODE">QRCode de Integrante inválido !</string>
    <string name="ALERT_SELECT_ABASTECEDOR_VALIDO">Selecione um Abastecedor valido !</string>
    <string name="ALERT_SELECT_ABS">Selecione um Combustível / Lubrificante !</string>
    <string name="ALERT_SELECT_QTD">Informe a quantidade !</string>
    <string name="ALERT_INFORME_SENHA_OPERADOR">Informe a senha do operador</string>
    <string name="ALERT_INTEGRANTE_EXISTENTE">Este integrante já foi adicionado!</string>
    <string name="ALERT_CONFIRM_EQUIPE_REMOVE">Os eventos desta equipe serão removidos. Deseja realmente continuar ?</string>
    <string name="ALERT_CONFIRM_REMOVE">Deseja realmente excluir este registro ?</string>
    <string name="ALERT_EXISTS_CHILDS_MOV">Não é possível excluir. Existem viagens associadas.</string>
    <string name="ALERT_EXISTS_CHILDS_EQP">Não é possível excluir. Existem eventos associados.</string>
    <string name="ALERT_IMPORT_FILE_NOT_FOUND">Necessário baixar arquivo #.</string>
    <string name="ALERT_IMPORT_FILE_INVALID">Arquivo de importação # inválido ou incompleto !</string>
    <string name="ALERT_IMPORT_SEM_DADOS">Arquivo de importação não possui registros em # !</string>
    <string name="ALERT_EXPORT_FILE_INVALID">Arquivo inválido ou incompleto !</string>
    <string name="ALERT_INCOMPLETE_VALUES">Dados incompletos ! Clique na imagem para editar.</string>
    <string name="ALERT_CONFIRM_COPY">A localização atual será alterada. Deseja continuar?</string>
    <string name="ALERT_QTD_EMPTY">Quantidade deve ser maior que 0 !</string>
    <string name="ALERT_TOTALIZADOR_FIM_INVALIDO">O Totalizador Final deve ser maior do que o inicial !</string>
    <string name="ALERT_HOUR_INVALID"># inválida !</string>
    <string name="ALERT_SENHA_INVALIDA">Senha Inválida !</string>
    <string name="AGUARDE">Aguarde</string>
    <string name="configuracoes">Configurações</string>
    <string name="importar_dados">Baixar Cadastros</string>
    <string name="exportar_dados">Enviar Dados</string>
    <string name="relatorio_envio">Relatório de Envio</string>
    <string name="nova_versao">Nova Versão</string>
    <string name="modulos">Módulos</string>
    <string name="menu_localizacao">Localização</string>
    <string name="HEADER_ADD_INTEGRANTE_TEMP">Adicionar Integrante Temporário</string>
    <string name="HEADER_PRODUCAO_SERVICO">Produção dos Serviços</string>
    <string name="HEADER_INDICE_PLUVIOMETRICO">Apontamentos de Índices Pluviométricos</string>
</resources>